Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -266,8 +266,7 @@ hr[role=presentation]::before, hr[role=presentation]::after {
 }
 
 hr[role=presentation]::before {
-  float: left
-}
+  float: left }
 
 hr[role=presentation]::after { float: right }
 hr[data-icon] { justify-content: center }
